--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -40,3 +40,11 @@ h1 {
   background-color: grey;
   cursor: not-allowed;
 }
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+}
