--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -7,6 +7,8 @@
   background-color: white;
   box-sizing: border-box;
   border-radius: 10px;
+  display: flex;
+  gap: 10px;
 }
 .name-input:focus {
   outline: none;
